# counterpoint-engine

./: AGENT.md  README.md  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: ci.yml
counterpoint_engine/: __init__.py  analysis.py  canon.py  exceptions.py  generator.py  laman_counterpoint.py  rules.py  tensor_output.py
counterpoint_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
counterpoint_engine/harmony/: __init__.py  counterpoint_bridge.py
docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
examples/: basic_counterpoint.py  basic_species.py  fugue_excerpt.py  laman_proof.py  laman_rigidity.py  multi_voice.py  tensor_output.py
tests/: test_analysis.py  test_canon.py  test_generator.py  test_integration.py  test_laman.py  test_musical_fixes.py  test_properties.py  test_rules.py  test_species.py  test_stress_edge_regression.py  test_tensor_output.py
