[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterpoint-engine"
version = "0.1.0"
description = "Real-time counterpoint engine proving music IS constraint satisfaction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Forgemaster", email = "forgemaster@superinstance.ai"},
]
keywords = ["counterpoint", "constraint-satisfaction", "laman", "rigidity", "tensor-midi", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
]

dependencies = [
    "constraint-theory-core",
    "flux-tensor-midi",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "mypy>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["counterpoint_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
